--- a/index.html
+++ b/index.html
@@ -259,16 +259,15 @@
 
       </div>
       <div class="row mb-5">
-        <div class="row col-8 pb-5 border-bottom">
+        <div class="row col-12  col-lg-8 pb-5 border-bottom">
           <div class="ad_slot d-flex justify-content-center">
-            <img src="https://placehold.co/400x150" alt="">
           </div>
           <div class="d-flex justify-content-center fw-bold mb-4 section_text">
             <div class="slash me-2">/ </div>
             LATEST NEWS
             <div class="slash ms-2"> /</div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-12 col-sm-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -276,7 +275,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-12 col-sm-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -284,7 +283,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-12 col-sm-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -292,7 +291,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-12 col-sm-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -300,7 +299,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-12 col-sm-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -308,7 +307,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-12 col-sm-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -316,7 +315,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-12 col-sm-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -324,7 +323,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-12 col-sm-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -334,7 +333,7 @@
           </div>
 
         </div>
-        <div class="row col justify-content-center mt-3">
+        <div class="col-4 row d-none d-lg-block justify-content-center mt-3">
           <div class="d-flex justify-content-center fw-bold mb-4 section_text">
             <div class="slash me-2">/ </div>
             SHOPPING
@@ -380,7 +379,7 @@
         </div>
       </div>
       <div class="row mb-5">
-        <div class="row col-8">
+        <div class="row col-12 col-lg-8">
 
           <div class="d-flex justify-content-center fw-bold mb-4 section_text">
             <div class="slash me-2">/ </div>
@@ -537,12 +536,12 @@
 
 
         </div>
-        <div class="d-flex col justify-content-center mt-3">
+        <div class="col-4 d-none d-lg-block justify-content-center mt-3">
           <img src="https://placehold.co/300x225" class="pt-5 sliding_ad d-flex position-sticky">
         </div>
       </div>
       <div class="row mb-5">
-        <div class="row col-8 justify-content-center">
+        <div class="row col-12 col-lg-8 justify-content-center">
           <div class="ad_slot d-flex justify-content-center">
             <img src="https://placehold.co/400x150" alt="">
           </div>
@@ -665,7 +664,7 @@
             </div>
           </div>
         </div>
-        <div class="col mt-3">
+        <div class="col-4 d-none d-lg-block mt-3">
 
           <div class="row side_pages justify-content-center">
             <div class="d-flex justify-content-center fw-bold mb-4 section_text">
@@ -720,10 +719,9 @@
             <img src="https://placehold.co/300x225" class="pt-5 sliding_ad d-flex position-sticky">
           </div>
         </div>
-
       </div>
       <div class="row mb-5">
-        <div class="row col-8 justify-content-center">
+        <div class="main_column row col-12 col-lg-8  justify-content-center">
           <div class="d-flex ps-4 pt-4 pb-4 m-0 border-bottom">
             <div class="d-flex align-items-center">
               <img class="big_left_card" src="https://placehold.co/350x200" alt="">
@@ -894,7 +892,7 @@
           </div>
 
         </div>
-        <div class="col mt-3">
+        <div class="side_column col-4 d-none d-lg-block mt-3">
           <div class="d-flex justify-content-center fw-bold mb-4 section_text">
             <div class="slash me-2">/ </div>
             VOICES
