--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             LATEST NEWS
             <div class="slash ms-2"> /</div>
           </div>
-          <div class="card col-md-3 col-12 col-sm-6">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -275,7 +275,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-md-3 col-12 col-sm-6">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -283,7 +283,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-md-3 col-12 col-sm-6">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -291,7 +291,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-md-3 col-12 col-sm-6">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -299,7 +299,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-md-3 col-12 col-sm-6">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -307,7 +307,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-md-3 col-12 col-sm-6">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -315,7 +315,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-md-3 col-12 col-sm-6">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -323,7 +323,7 @@
                 content.</p>
             </div>
           </div>
-          <div class="card col-md-3 col-12 col-sm-6">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
@@ -387,56 +387,56 @@
             <div class="slash ms-2"> /</div>
           </div>
 
-          <div class="card col-3">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
             </div>
           </div>
-          <div class="card col-3">
+          <div class="card col-md-3 col-6">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
             </div>
           </div>
-          <div class="card border-bottom col-3 pb-5 mb-5">
+          <div class="card border-bottom col-md-3 col-6 pb-5 mb-5">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
             </div>
           </div>
-          <div class="card border-bottom col-3 pb-5 mb-5">
+          <div class="card border-bottom col-md-3 col-6 pb-5 mb-5">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
             </div>
           </div>
-          <div class="card border-bottom col-3 pb-5 mb-5">
+          <div class="card border-bottom col-md-3 col-6 pb-5 mb-5">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
             </div>
           </div>
-          <div class="card border-bottom col-3 pb-5 mb-5">
+          <div class="card border-bottom col-md-3 col-6 pb-5 mb-5">
             <img src="https://placehold.co/160x90" class="card-img-top">
             <div class="card-body">
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
