--- a/index.html
+++ b/index.html
@@ -979,11 +979,14 @@
     </main>
 
     <div id="huff_footer" class="">
-      <div id="ft_links" class="row align-content-center border-bottom me-4 ms-4 pt-4 pb-4">
-        <div class="col-2">
-          <img src="https://placehold.co/175x155" alt="">
+      <div id="ft_links" class="row align-content-center border-bottom me-4 ms-5 pt-4 pb-4">
+        <div id="ft_img1" class="col-xl-2 d-none d-xl-block">
+          <img src="https://placehold.co/175x155" >
         </div>
-        <div class="footer_text1 row col-4 fw-bold mt-3 ms-3">
+        <div id="ft_img2" class="d-xl-none">
+          <img src="https://placehold.co/28x28" >
+        </div>
+        <div class="footer_text1 row col-xl-4 col-6 fw-bold mt-3 ms-3">
           <div class="col-6">NEWS</div>
           <div class="col-6">VOICES</div>
           <div class="col-6">POLITICS</div>
