--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">
           <img src="https://placehold.co/24x24" alt="">
         </button>
-        <a id="nav_logo2" class="pe-3" href="#">
+        <a id="nav_logo2" class="pe-3 d-none" href="#">
           <img src="https://placehold.co/24x24" alt="">
         </a>
       </div>
@@ -201,7 +201,7 @@
         <img class="me-2" src="https://placehold.co/22x22">
         <div id="log_in" class="fw-bold d-flex align-content-center">
           <div id="li_text">Log In</div>
-          <img id="li_img" src="https://placehold.co/22x22" alt="">
+          <img id="li_img" class="d-none" src="https://placehold.co/22x22" alt="">
         </div>
         <div id="supp_btn" class="fw-bold d-flex justify-content-center align-items-center rounded-pill ms-3">SUPPORT US
         </div>
@@ -979,7 +979,7 @@
     </main>
 
     <div id="huff_footer" class="">
-      <div id="ft_links" class="row align-content-center border-bottom me-4 ms-5 pt-4 pb-4">
+      <div id="ft_links" class="row align-content-center border-bottom me-4 ms-5 pt-4 pb-4 ">
         <div id="ft_img1" class="col-xl-2 d-none d-xl-block">
           <img src="https://placehold.co/175x155" >
         </div>
@@ -987,30 +987,30 @@
           <img src="https://placehold.co/28x28" >
         </div>
         <div class="footer_text1 row col-xl-4 col-6 fw-bold mt-3 ms-3">
-          <div class="col-6">NEWS</div>
-          <div class="col-6">VOICES</div>
-          <div class="col-6">POLITICS</div>
-          <div class="col-6">HUFFPOST PERSONAL</div>
-          <div class="col-6">ENTERTAINMENT</div>
-          <div class="col-6">SHOPPING</div>
-          <div class="col-6">LIFE</div>
-          <div class="col-6">NEWSLETTERS</div>
+          <div class="col-6 text-nowrap pb-2 small_text">NEWS</div>
+          <div class="col-6 text-nowrap pb-2 small_text">VOICES</div>
+          <div class="col-6 text-nowrap pb-2 small_text">POLITICS</div>
+          <div class="col-6 text-nowrap pb-2 small_text">HUFFPOST PERSONAL</div>
+          <div class="col-6 text-nowrap pb-2 small_text">ENTERTAINMENT</div>
+          <div class="col-6 text-nowrap pb-2 small_text">SHOPPING</div>
+          <div class="col-6 text-nowrap pb-2 small_text">LIFE</div>
+          <div class="col-6 text-nowrap pb-2 small_text">NEWSLETTERS</div>
         </div>
         <div class="footer_text2 row col-6 d-flex justify-content-start fw-bold  mt-3 ">
-          <div class="col-4">ABOUT US</div>
-          <div class="col-4">CAREERS</div>
-          <div class="col-4">ACCESSIBILITY STATEMENT</div>
-          <div class="col-4">ADVERTISE</div>
-          <div class="col-4">USER AGREEMENT</div>
-          <div class="col-4">PRIVACY POLICY</div>
-          <div class="col-4">CONTACT US</div>
-          <div class="col-4">COMMENT POLICY</div>
-          <div class="col-4">CONSENT PREFERENCES</div>
-          <div class="col-4">RSS</div>
-          <div class="col-4">DMCA POLICY</div>
-          <div class="col-4">MANAGE PREFERENCES</div>
-          <div class="col-4">FAQ</div>
-          <div class="col-4">HUFFPOST PRESS ROOM</div>
+          <div class="col-4 text-nowrap pb-2 small_text">ABOUT US</div>
+          <div class="col-4 text-nowrap pb-2 small_text">CAREERS</div>
+          <div class="col-4 text-nowrap pb-2 small_text">ACCESSIBILITY STATEMENT</div>
+          <div class="col-4 text-nowrap pb-2 small_text">ADVERTISE</div>
+          <div class="col-4 text-nowrap pb-2 small_text">USER AGREEMENT</div>
+          <div class="col-4 text-nowrap pb-2 small_text">PRIVACY POLICY</div>
+          <div class="col-4 text-nowrap pb-2 small_text">CONTACT US</div>
+          <div class="col-4 text-nowrap pb-2 small_text">COMMENT POLICY</div>
+          <div class="col-4 text-nowrap pb-2 small_text">CONSENT PREFERENCES</div>
+          <div class="col-4 text-nowrap pb-2 small_text">RSS</div>
+          <div class="col-4 text-nowrap pb-2 small_text">DMCA POLICY</div>
+          <div class="col-4 text-nowrap pb-2 small_text">MANAGE PREFERENCES</div>
+          <div class="col-4 text-nowrap pb-2 small_text">FAQ</div>
+          <div class="col-4 text-nowrap pb-2 small_text">HUFFPOST PRESS ROOM</div>
         </div>
       </div>
       <div class="d-flex justify-content-between pt-2 ms-3 me-3">
