--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
           <div id="li_text">Log In</div>
           <img id="li_img" class="d-none" src="https://placehold.co/22x22" alt="">
         </div>
-        <div id="supp_btn" class="fw-bold d-flex justify-content-center align-items-center rounded-pill ms-3">SUPPORT US
-        </div>
+        <button id="supp_btn" class="btn-link fw-bold d-flex justify-content-center align-items-center rounded-pill ms-3">SUPPORT US
+        </button>
 
       </div>
     </nav>
@@ -978,7 +978,7 @@
       </div>
     </main>
 
-    <div id="huff_footer" class="">
+    <div id="huff_footer" >
       <div id="ft_links" class="row align-content-center border-bottom me-4 ms-5 pt-4 pb-4 ">
         <div id="ft_img1" class="col-xl-2 d-none d-xl-block">
           <img src="https://placehold.co/175x155" >
@@ -986,7 +986,7 @@
         <div id="ft_img2" class="d-xl-none">
           <img src="https://placehold.co/28x28" >
         </div>
-        <div class="footer_text1 row col-xl-4 col-6 fw-bold mt-3 ms-3">
+        <div class="footer_text1 row col-xl-4 col-lg-6 col-12 fw-bold mt-3 ms-2">
           <div class="col-6 text-nowrap pb-2 small_text">NEWS</div>
           <div class="col-6 text-nowrap pb-2 small_text">VOICES</div>
           <div class="col-6 text-nowrap pb-2 small_text">POLITICS</div>
@@ -996,24 +996,24 @@
           <div class="col-6 text-nowrap pb-2 small_text">LIFE</div>
           <div class="col-6 text-nowrap pb-2 small_text">NEWSLETTERS</div>
         </div>
-        <div class="footer_text2 row col-6 d-flex justify-content-start fw-bold  mt-3 ">
-          <div class="col-4 text-nowrap pb-2 small_text">ABOUT US</div>
-          <div class="col-4 text-nowrap pb-2 small_text">CAREERS</div>
-          <div class="col-4 text-nowrap pb-2 small_text">ACCESSIBILITY STATEMENT</div>
-          <div class="col-4 text-nowrap pb-2 small_text">ADVERTISE</div>
-          <div class="col-4 text-nowrap pb-2 small_text">USER AGREEMENT</div>
-          <div class="col-4 text-nowrap pb-2 small_text">PRIVACY POLICY</div>
-          <div class="col-4 text-nowrap pb-2 small_text">CONTACT US</div>
-          <div class="col-4 text-nowrap pb-2 small_text">COMMENT POLICY</div>
-          <div class="col-4 text-nowrap pb-2 small_text">CONSENT PREFERENCES</div>
-          <div class="col-4 text-nowrap pb-2 small_text">RSS</div>
-          <div class="col-4 text-nowrap pb-2 small_text">DMCA POLICY</div>
-          <div class="col-4 text-nowrap pb-2 small_text">MANAGE PREFERENCES</div>
-          <div class="col-4 text-nowrap pb-2 small_text">FAQ</div>
-          <div class="col-4 text-nowrap pb-2 small_text">HUFFPOST PRESS ROOM</div>
+        <div class="footer_text2 row col-lg-6 col-12 d-flex justify-content-start fw-bold ms-2 mt-3 ">
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">ABOUT US</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">CAREERS</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">ACCESSIBILITY STATEMENT</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">ADVERTISE</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">USER AGREEMENT</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">PRIVACY POLICY</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">CONTACT US</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">COMMENT POLICY</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">CONSENT PREFERENCES</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">RSS</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">DMCA POLICY</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">MANAGE PREFERENCES</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">FAQ</div>
+          <div class="col-md-4 col-6 text-nowrap pb-2 small_text">HUFFPOST PRESS ROOM</div>
         </div>
       </div>
-      <div class="d-flex justify-content-between pt-2 ms-3 me-3">
+      <div class="d-flex justify-content-between pt-2 pb-2 ms-3 me-3">
         <div class="footer_text2">Part of HuffPost Politics. ©2024 BuzzFeed, Inc. All rights reserved.</div>
         <div class="footer_text2">The Huffington Post</div>
       </div>
