--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </div>
 
     <main class="front_page container">
-      <div class="text-center w-100 mb-5">
+      <div class="text-center w-100 p-5 pt-0 ">
         <a class="d-block red_link  fw-bold fst-italic mb-2 h2" href="#">⚡️ NEW: Appeals Court Overturns Harvey
           Weinstein Rape Conviction...</a>
         <a class="d-block red_link fw-bold display-3" href="#">TRUMP SHOCK SCOTUS CLAIM: PREZ CAN LEGALLY ASSASSINATE
